# realtor-assistant

./: .claudeignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  IDENTITY.md  MEMORY_SUMMARY.md  PRINCIPLES.md  PRODUCT_ROADMAP.md  PROJECT.md  RUNBOOK.md  SOUL.md  STATUS.md  TOOLS.md  ima_video_create.py  pyproject.toml  requirements.txt  server.py
.claude/commands/: debug.md  review.md  start.md  test-pipeline.md
.gstack/qa-reports/: qa-report-listing-video-2026-03-25.md
agent/: callback_client.py  media_sender.py  voice_clone_handler.py
console/: __init__.py  memory_schema.py  router.py
console/templates/: base.html  client_detail.html  dashboard.html  form_done.html  onboarding.html  onboarding_form.html
doc/: PRD.md  PRINCIPLES_DELIVERY_REPORT.md  Principle - 面向 Agent 的产品设计 5 原则_副本.md  Stephanie-01.md  VIDEO_QUALITY_ARCHITECTURE.md  audio1814722699_transcript_en-josh.txt  audio1815458225_transcript_en.txt  natalie-transcript(1).md  prita-interview-transcript.md  re-news-sources-research.md  产品原则概述.md
doc/openclaw/: AGENTS.md  CALLBACK_RENDERING.md  MINI_HANDOFF.md  MOCK_INTEGRATION.md  OPS_CONTEXT_SPEC.md  (+6 more)
docs/: INDEX.md  skill-system.md
openclaw/: README.md
orchestrator/: cleanup.py  daily_scheduler.py  dispatcher.py  error_classifier.py  job_manager.py  progress_notifier.py
routes/: __init__.py  admin.py
tests/: test_console_experience.py  test_experience_assets.py  test_message_routing.py  test_openclaw_mock_integration.py  test_voice_clone.py  test_voice_clone_trigger.py
tools/: run_dialogue_eval.py  run_prelaunch_audit.py
(+95 files in other folders)
